# EterniaEngine

./: .cproject  .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  EterniaEngine.cbp  EterniaEngine.depend  EterniaEngine.layout  Makefile  README.md  Settings.cfg  alut-config.cmake  cmake_install.cmake  cshader  doxygen.conf  freeglut.pc  libGLEW.so.1.8  makerun.sh  opencl-config.cmake  version.h
Debug/: makefile  sources.mk
Debug/FBXCommon/: subdir.mk
Debug/data/Model/: subdir.mk
Debug/lib/FFmpeg/: subdir.mk
Debug/lib/FFmpeg/compat/: subdir.mk
Debug/lib/FFmpeg/compat/djgpp/: subdir.mk
Debug/lib/FFmpeg/compat/msvcrt/: subdir.mk
Debug/lib/FFmpeg/doc/: subdir.mk
Debug/lib/FFmpeg/doc/examples/: subdir.mk
Debug/lib/FFmpeg/fftools/: subdir.mk
Debug/lib/FFmpeg/libavcodec/: subdir.mk
Debug/lib/FFmpeg/libavcodec/aarch64/: subdir.mk
Debug/lib/FFmpeg/libavdevice/: subdir.mk
Debug/lib/FFmpeg/libavfilter/: subdir.mk
Debug/lib/FFmpeg/libavformat/: subdir.mk
Debug/lib/FFmpeg/libavresample/: subdir.mk
Debug/lib/FFmpeg/libavutil/: subdir.mk
Debug/lib/FFmpeg/libpostproc/: subdir.mk
Debug/lib/FFmpeg/libswresample/: subdir.mk
Debug/lib/FFmpeg/libswscale/: subdir.mk
Debug/lib/FFmpeg/tests/: subdir.mk
Debug/lib/FFmpeg/tools/: subdir.mk
Debug/lib/ImageMagick/MagickCore/: subdir.mk
Debug/lib/ImageMagick/MagickWand/: subdir.mk
Debug/lib/ImageMagick/api_examples/: subdir.mk
Debug/lib/ImageMagick/coders/: subdir.mk
Debug/lib/ImageMagick/filters/: subdir.mk
Debug/lib/ImageMagick/tests/: subdir.mk
Debug/lib/ImageMagick/utilities/: subdir.mk
Debug/lib/cpython/Misc/: subdir.mk
Debug/lib/cpython/Modules/: subdir.mk
Debug/lib/cpython/Objects/: subdir.mk
Debug/lib/cpython/PC/: subdir.mk
Debug/lib/cpython/Parser/: subdir.mk
Debug/lib/cpython/Programs/: subdir.mk
Debug/lib/cpython/Python/: subdir.mk
Debug/lib/freealut/examples/: subdir.mk
Debug/lib/freealut/src/: subdir.mk
Debug/lib/freealut/test_suite/: subdir.mk
Debug/lib/lua/: subdir.mk
Debug/lib/openal-soft/Alc/: subdir.mk
Debug/lib/openal-soft/OpenAL32/: subdir.mk
Debug/lib/openal-soft/cmake/: subdir.mk
Debug/lib/openal-soft/common/: subdir.mk
Debug/lib/openal-soft/examples/: subdir.mk
Debug/lib/openal-soft/native-tools/: subdir.mk
Debug/lib/openal-soft/router/: subdir.mk
Debug/lib/openal-soft/utils/: subdir.mk
Debug/lib/zlib/: subdir.mk
Debug/lib/zlib/examples/: subdir.mk
Debug/lib/zlib/test/: subdir.mk
Debug/src/: subdir.mk
Debug/src/AI/: subdir.mk
Debug/src/EncryptedData/: subdir.mk
Debug/src/Exporting/: subdir.mk
Debug/src/GUI/: subdir.mk
Debug/src/GUI/DevEnv/: subdir.mk
Debug/src/Helper/: subdir.mk
Debug/src/Model/: subdir.mk
Debug/src/Networking/: subdir.mk
Debug/src/Scripts/: subdir.mk
Debug/src/Scripts/Python/: subdir.mk
Debug/src/Sound/: subdir.mk
Debug/src/Sprite2D/: subdir.mk
Debug/src_old/Config_old/: Config.d  subdir.mk
Debug/src_old/Event_old/: Event.d  EventRequirement.d  EventScheduler.d  EventTrigger.d  subdir.mk
Debug/src_old/Events_old/: KeyHandleEvent.d  MouseHandleEvent.d  subdir.mk
FBXCommon/: AnimationUtility.cxx  AnimationUtility.h  Common.cxx  Common.h  GeometryUtility.cxx  GeometryUtility.h
data/: Ingot.blend  Ingot.blend1
data/Model/: Cat.mtl  MythrilOre.fbx
lib/precompiled/: libalut.la  libalut.so.0.1.0  libz.so.1.2.11
shaders_/: BasicParticles.glsl  BasicParticles_Fragment.glsl  BumpMap.glsl  BumpMap_Fragment.glsl  Light_Fragment.glsl  Light_Vertex.glsl  Lighting_Fragment.glsl  VertexPassthrough.glsl
src/: App.h  App_Core.cpp  App_GlutInit.cpp  App_Init.cpp  App_InitErrorSignals.cpp  App_Test.cpp  App_ThreadAI.cpp  App_ThreadAnimations.cpp  App_ThreadBackendRender.cpp  App_ThreadCompression.cpp  App_ThreadEntity.cpp  App_ThreadEvents.cpp  App_ThreadFps.cpp  App_ThreadLoad.cpp  App_ThreadNetworking.cpp  App_ThreadPhysics.cpp  App_ThreadRender.cpp  App_ThreadScripts.cpp  App_ThreadSound.cpp  App_ThreadUpdate.cpp  GEN_IDEAS.txt  Shaders.h  main.cpp
src/AI/: AICore.h  AICore_Personality.cpp  Basic_AI.jff  Entity.h
src/EncryptedData/: EFile.h  EFolder.h  Encryptor.cpp  Encryptor.h
src/Event_old/: Event.h  EventRequirement.h  EventTrigger.h
src/Exporting/: generateExports.h
src/GUI/: DrawArea.cpp  DrawArea.h  GButton.h  GLCommon.h  GLabel.cpp  GLabel.h  GObject.cpp_  GObject.h  GObject.h_  GSimpleDrawers.cpp  GSimpleDrawers.h  GSlider.cpp  GSlider.h  GTextBox.cpp  GTextBox.h  GTreeView.cpp  GTreeView.h  GWindow.cpp  GWindow.h  gui.h
src/GUI/DevEnv/: DevConfig.h  DevEnv.h  DevEnv_Events.cpp  DevEnv_Init.cpp
src/GUI/DevEnv/DevGUIs/: DevConsoleWindow.h  DevDockableWindow.cpp  DevDockableWindow.h  DevDockingTabArea.cpp  DevDockingTabArea.h  DevFileEditor.h  DevMenuBar.cpp  DevMenuBar.h  DevMenuItem.cpp  DevMenuItem.h  DevProjectEditor.cpp  DevProjectEditor.h
src/GUI/DevEnv/DevViews/: DevModelEditor.cpp  DevModelEditor.h
src/Helper/: AnimatedObject.cpp  AnimatedObject.h  Camera.cpp  Camera.h  Compressable.cpp  Compressable.h  FBOLoader.h  LoadItem.cpp  LoadItem.h  Loader.cpp  Loader.h  ResourceLocation.h
src/Model/: Model.cpp  Model.h  ModelFragment.cpp  ModelFragment.h  ModelMaterial.cpp  ModelMaterial.h  ModelPart.cpp  ModelPart.h  Model_Animation.cpp  Model_FBX.cpp  Model_loadFromObj.cpp  glsl.cpp  glsl.h
src/Networking/: IDEAS.txt  NetClient.cpp  NetClient.h  NetHandler.h  NetPacket.h  serverClientHandler.h
src/Scripts/: CSharp.h  Java.cpp  Java.h  Javascript.h  LanguageBase.cpp  LanguageBase.h  Lua.cpp  Lua.h  Python.h  PythonS.cpp  PythonS.h  ScriptCore.cpp  ScriptCore.h  ScriptProvider.h
src/Scripts/API/: API.h  API_3D.h  API_Model.h
src/Scripts/Python/: APIp.h  pModel.cpp  pModel.h
src/Sound/: EntitySound.h  SoundBufferData.cpp  SoundBufferData.h  SoundListener.cpp  SoundListener.h  SoundManager.cpp  SoundManager.h  SoundMic.cpp  SoundMic.h  SoundSource.cpp  SoundSource.h
src/Sprite2D/: Sprite2D.cpp  Sprite2D.h
src_old/Config_old/: Config.cpp  Config.h
src_old/Event_old/: Event.cpp  EventRequirement.cpp  EventTrigger.cpp
(+101 files in other folders)
